doc/jtml.bnf
<document> ::= <elements>
<elements> ::= <element> | <elements> <element>
<value> ::= '{' <elements> '}'
<element> ::= <ID> <attributes> <value> | <STRING_LITERAL>
<attributes> ::= '(' <attribute> ')' | '(' <attributes> ' ' <attribute> ')'
<attribute> ::= <ID> '=' <STRING_LITERAL>
<STRING_LITERAL> :: = '"' /*/  '"'
<ID> ::= <LETTER> | <LETTER> <ID>
<LETTER> ::= 'a' | 'b' | 'c' | 'd' | 'e' | 'f' |
             'g' | 'h' | 'i' | 'j' | 'k' | 'l' |
             'm' | 'n' | 'o' | 'p' | 'q' | 'r' |
             's' | 't' | 'u' | 'v' | 'w' | 'x' |
             'y' | 'z' |
             'A' | 'B' | 'C' | 'D' | 'E' | 'F' |
             'G' | 'H' | 'I' | 'J' | 'K' | 'L' |
             'M' | 'N' | 'O' | 'P' | 'Q' | 'R' |
             'S' | 'T' | 'U' | 'V' | 'W'|  'X'|
             'Y' | 'Z'|
             '0' | '1' | '2' | '3' | '4' | '5' |
             '6' | '7' | '8' | '9'
